--- a/contact.html
+++ b/contact.html
@@ -36,41 +36,36 @@
 
   <body>
     <!-- navbar -->
-    <div class="container" id="nav-bar-up">
-      <div class="row">
-        <div class="col-md-12">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Ronald Cubillo Jimenez</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
+    <header class="header">
+      <div class="container" id="nav-bar-up">
+        <div class="row" id="large">
+          <div class="col-md-12">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="index.html">Ronald Cubillo Jimenez</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link  "href="contact.html" tabindex="-1"aria-disabled="true">Contact</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </nav>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link "href="contact.html"tabindex="-1" aria-disabled="true">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
       </div>
-    </div>
+    </header>
+
     <!-- main section -->
 
     <div class="container">
@@ -81,11 +76,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="card">
-                    <img
-                      src="assets/images/chino.png"
-                      class="card-img-top"
-                      alt="my-picture"
-                    />
+                    <img src="assets/images/chino.png" class="ronald" alt="my-picture"/>
                   </div>
                 </div>
 
@@ -147,7 +138,7 @@
     <!-- footer -->
 
     <div class="footer">
-      <p>Footer</p>
+      <p id="footer-coment">©opyright</p>
     </div>
   </body>
-</html>
+</html
