Boostrap-portfolio done

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
     <header class="header">
        <div class="container" id="nav-bar-up">
       <div class="row" id="large">
-        <div class="col-md-12">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Ronald Cubillo Jimenez</a>
+        <div class="col-md-12" >
+          <nav class="navbar navbar-expand-lg navbar-light ">
+            <a class="navbar-brand" href="index.html">Ronald Cubillo Jimenez</a>
             <button
               class="navbar-toggler" type="button"
               data-toggle="collapse"
@@ -83,27 +83,27 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="card" id="game1">
-                    <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                    <img src="assets/images/game1.jpeg" class="card-img-top"  alt="my-picture"/>
                     <div>
-                        <a class="text1" href="#">Game1</a>
+                        <a class="text1" href="#"><strong>Game1</strong></a>
                       </div>
                   </div>
 
                 </div>
                 <div class="col-md-4" id="game2">
                    <div class="card">
-                   <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                   <img src="assets/images/game2.jpg" class="card-img-top"  alt="my-picture"/>
                    <div>
-                      <a class="text1" href="#">Game2</a>
+                      <a class="text1" href="#"><strong>Game2</strong></a>
                     </div>
                    </div>
 
                 </div>
                 <div class="col-md-4">
                   <div class="card" id="game3">
-                  <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                  <img src="assets/images/game3.jpg" class="card-img-top"  alt="my-picture"/>
                   <div>
-                      <a class="text1" href="#">Game3</a>
+                      <a class="text1" href="#"><strong>Game3</strong></a>
                     </div>
                   </div>
                 </div>
@@ -114,26 +114,26 @@
                 <div class="row">
                     <div class="col-md-4">
                       <div class="card" id="game4">
-                        <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                        <img src="assets/images/game4.jpg" class="card-img-top"  alt="my-picture"/>
                         <div>
-                          <a class="text1" href="#">Game4</a>
+                          <a class="text1" href="#"><strong>Game4</strong></a>
                         </div>
                       </div>
                     </div>
 
                     <div class="col-md-4">
                        <div class="card" id="game5">
-                       <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                       <img src="assets/images/game5.jpg" class="card-img-top"  alt="my-picture"/>
                        <div>
-                          <a class="text1" href="#">Game5</a>
+                          <a class="text1" href="#"><strong>Game5</strong></a>
                         </div>
                        </div>
                     </div>
                     <div class="col-md-4">
                       <div class="card" id="game5">
-                      <img src="assets/images/chino.png" class="card-img-top"  alt="my-picture"/>
+                      <img src="assets/images/game6.jpg" class="card-img-top"  alt="my-picture"/>
                       <div>
-                          <a class="text1" href="#">Game6</a>
+                          <a class="text1" href="#"><strong>Game6</strong></a>
                         </div>
                       </div>
                     </div>
@@ -152,7 +152,7 @@
     <!-- footer -->
 
     <div class="footer">
-      <p id="footer-coment">©opyright</p>
+      <p id="footer-coment">©Copyright</p>
     </div>
   </body>
 </html>
