--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
     <header class="header">
       <div class="container" id="nav-bar-up">
         <div class="row" id="large">
-          <div class="col-md-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="col-md-12" id="nav-up">
+            <nav class="navbar navbar-expand-lg navbar-light ">
               <a class="navbar-brand" href="index.html">Ronald Cubillo Jimenez</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,65 +67,65 @@
     </header>
 
     <!-- main section -->
-
     <div class="container">
       <div class="row" id="middle-section">
         <div class="col-md-12">
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
+              <h1 >Contact</h1>
+              <hr>
               <div class="row">
-                <div class="col-md-4">
-                  <div class="card">
-                    <img src="assets/images/chino.png" class="ronald" alt="my-picture"/>
-                  </div>
+                <div class="col-md-6">
+                  <form class="form">
+                    <div class="form-group row">
+                      <label for="colFormLabel" class="col-sm-2 col-form-label ">Name</label>
+                      <div class="col-sm-12">
+                        <input type="name" class="form-control form-control" id="colFormLabel" placeholder="John Miller">
+                      </div>
+                    </div>
+
+                    <div class="form-group row">
+                      <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
+                      <div class="col-sm-12">
+                        <input type="email" class="form-control" id="colFormLabel" placeholder="johnmiller@gmail.com">
+                      </div>
+                    </div>
+
+
+                    <div class="form-group row">
+                      <label for="colFormLabel" class="col-sm-2 col-form-label ">Message</label>
+                      <div class="col-sm-12">
+                        <input type="Message" class="form-control form-control" id="colFormLabel" placeholder="Message">
+                      </div>
+                    </div>
+                    <input class="btn btn-primary" type="submit" value="Submit">
+
+                  </form>
                 </div>
 
-                <div class="col-md-8">
-                  <p>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book. It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining
-                    essentially unchanged. It was popularised in the 1960s with
-                    the release of Letraset sheets containing Lorem Ipsum
-                    passages, and more recently with desktop publishing software
-                    like Aldus PageMaker including versions of Lorem Ipsum.Lorem
-                    Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy
-                    text ever since the 1500s, when an unknown printer took a
-                    galley of type and scrambled it to make a type specimen
-                    book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the 1960s with the release
-                    of Letraset sheets containing Lorem Ipsum passages, and more
-                    recently with desktop publishing software like Aldus
-                    PageMaker including versions of Lorem Ipsum.Lorem Ipsum is
-                    simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever
-                    since the 1500s, when an unknown printer took a galley of
-                    type and scrambled it to make a type specimen book. It has
-                    survived not only five centuries, but also the leap into
-                    electronic typesetting, remaining essentially unchanged.
-                  </p>
-                </div>
-
-                <div class="row">
-                  <div class="col-md-12">
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the industry's
-                      standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a
-                      type specimen book. It has survived not only five
-                      centuries, but also the leap into electronic typesetting,
-                      remaining essentially unchanged. It was popularised in the
-                      1960s with the release of Letraset sheets containing Lorem
-                      Ipsum passages, and more recently with desktop publishing
-                      software like Aldus PageMaker including versions of Lorem
-                      Ipsum.
-                    </p>
+                <!-- more information -->
+                <div class="col-md-6">
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">More information</h5>
+                      <hr>
+                      <!-- github -->
+                      <a href="https://github.com/rcubillo">
+                        <svg id="i-github" viewBox="0 0 64 64" width="32" height="32">
+                          <path stroke-width="0" fill="currentColor" d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12 42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z" />
+                        </svg>
+                      </a>
+                      <!-- twitter -->
+                      <a href="https://github.com/rcubillo">
+                        <svg id="i-twitter" viewBox="0 0 64 64" width="32" height="32">
+                          <path stroke-width="0" fill="currentColor" d="M60 16 L54 17 L58 12 L51 14 C42 4 28 15 32 24 C16 24 8 12 8 12 C8 12 2 21 12 28 L6 26 C6 32 10 36 17 38 L10 38 C14 46 21 46 21 46 C21 46 15 51 4 51 C37 67 57 37 54 21 Z" />
+                        </svg>
+                      </a>
+                      <!-- linkein -->
+                      <a href="https:linkedin.com/in/ronald-cubillo">
+                        <img src="https://img.icons8.com/metro/26/000000/linkedin.png">
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -138,7 +138,7 @@
     <!-- footer -->
 
     <div class="footer">
-      <p id="footer-coment">©opyright</p>
+      <p id="footer-coment">©Copyright</p>
     </div>
   </body>
 </html
