--- a/contact.html
+++ b/contact.html
@@ -98,16 +98,14 @@
                           </div>
                         </div>
 
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Message</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+                        </div>
 
-                    <div class="form-group row">
-                      <label for="colFormLabel" class="col-sm-2 col-form-label ">Message</label>
-                      <div class="col-sm-12">
-                        <input type="Message" class="form-control form-control" id="colFormLabel" placeholder="Message">
-                      </div>
-                    </div>
-                    <input class="btn btn-primary" type="submit" value="Submit">
+                        <input class="btn btn-primary" type="submit" value="Submit">
 
-                  </form>
+                      </form>
                 </div>
 
                 <!-- more information -->
